@@ -177,7 +177,7 @@ Bugs, Contribution, GIT
 Copyright and License of this software
 --------------------------------------
   (C) 2005, 2006, 2007, 2009, 
-      2015, 2016, 2017  Heiko Stamer <HeikoStamer@gmx.net>
+      2015, 2016, 2017, 2018  Heiko Stamer <HeikoStamer@gmx.net>
         GNU General Public License version 2
 
   Please have a look at file 'COPYING' and https://www.fsf.org/.
